# inhouse-ml-competition-MDXQ-alumni-Mar

./: .gitignore  README.md  config.py  data_store.py  pyproject.toml  requirements.txt  streamlit_app.py  utils.py
.github/workflows/: deploy.yml
.streamlit/: config.toml  secrets.toml.example
competition_builder/: marimo_competion_builder.py
competition_files/: sample_spreadsheets.xlsx
competition_files/contents/: exercise.py  home.md  playground.py  problem.md
competition_files/data/: answer.csv  generate_competition_data.py  sample_submission.csv  test.csv  train.csv
competition_files/exercise/: RMSE.html  script.js  style.css
competition_files/playground/: index.md  index_md_convert.py
competition_files/playground/Colab/: sample.ipynb
competition_files/playground/JupyterLite/: requirements.txt
competition_files/playground/JupyterLite/content/: README.md  sample.ipynb
competition_files/playground/marimo/: sample.py
contents/: home.py  leaderboard.py  problem.py  submit.py
for_admin/apps/: register_ground_truth_app.py  view_ground_truth_data_app.py  view_leaderboard_data_app.py
for_admin/scripts/: generate_cookie_secret.py  generate_email_hash_salt.py  generate_password_hash.py
for_dev/: generate_test_lb_data.py  memo.md  test_leaderboard_data.csv
