[project]
name = "small-fix-inhouse-ml-competition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.6",
    "google-auth-oauthlib>=1.2.4",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "mysql-connector-python>=9.5.0",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.53.1",
    "streamlit-browser-session-storage>=0.0.12",
    "streamlit-local-storage>=0.0.25",
    "streamlit-screen-stats>=0.0.82",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
